# ModelTools

./: .gitignore  README.md  hello.py  pyproject.toml
scripts/: check_model_config.py  load_model.py  model_exporter.py  onnx_exporter.py  onnx_exporter_opt.py  t_SNE.py  tools.py
