[project]
name = "modeltools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "netron>=8.0.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.19.2",
    "onnxscript>=0.1.0.dev20241125",
    "optimum>=1.23.3",
    "orjson>=3.10.11",
    "pyinstrument>=5.0.0",
    "sentence-transformers>=3.3.1",
    "torch>=2.5.0",
    "transformers>=4.45.2",
]
